sw/source/core/layout/atrfrm.cxx
@@ -2521,8 +2521,7 @@ SwFrameFormat::SwFrameFormat(
     sal_uInt16 nFormatWhich,
     const WhichRangesContainer& pWhichRange)
 :   SwFormat(rPool, pFormatNm, pWhichRange, pDrvdFrame, nFormatWhich),
-    m_ffList(nullptr),
-    m_pOtherTextBoxFormat(nullptr)
+    m_ffList(nullptr)
 {
 }
 
@@ -2533,8 +2532,7 @@ SwFrameFormat::SwFrameFormat(
     sal_uInt16 nFormatWhich,
     const WhichRangesContainer& pWhichRange)
 :   SwFormat(rPool, rFormatNm, pWhichRange, pDrvdFrame, nFormatWhich),
-    m_ffList(nullptr),
-    m_pOtherTextBoxFormat(nullptr)
+    m_ffList(nullptr)
 {
 }
 
@@ -2549,24 +2547,15 @@ SwFrameFormat::~SwFrameFormat()
         }
     }
 
-    if( nullptr == m_pOtherTextBoxFormat )
+    if( nullptr == m_pOtherTextBoxFormats )
         return;
 
-    auto pObj = FindRealSdrObject();
-    if (Which() == RES_FLYFRMFMT && pObj)
-    {
-        // This is a fly-frame-format just delete this
-        // textbox entry from the draw-frame-format.
-        m_pOtherTextBoxFormat->DelTextBox(pObj);
-    }
+    // This is a fly-frame-format just delete this
+    // textbox entry from the textbox collection.
+    if (Which() == RES_FLYFRMFMT)
+        m_pOtherTextBoxFormats->DelTextBox(this);
 
-    if (Which() == RES_DRAWFRMFMT)
-    {
-        // This format is the owner shape, so its time
-        // to del the textbox node.
-        delete m_pOtherTextBoxFormat;
-        m_pOtherTextBoxFormat = nullptr;
-    }
+    m_pOtherTextBoxFormats.reset();
 }
 
 void SwFrameFormat::SetName( const OUString& rNewName, bool bBroadcast )
@@ -2885,9 +2874,9 @@ void SwFrameFormat::dumpAsXml(xmlTextWriterPtr pWriter) const
     if (pWhich)
         (void)xmlTextWriterWriteAttribute(pWriter, BAD_CAST("which"), BAD_CAST(pWhich));
 
-    if (m_pOtherTextBoxFormat)
+    if (m_pOtherTextBoxFormats)
     {
-        (void)xmlTextWriterWriteFormatAttribute(pWriter, BAD_CAST("OtherTextBoxFormat"), "%p", m_pOtherTextBoxFormat);
+        (void)xmlTextWriterWriteFormatAttribute(pWriter, BAD_CAST("OtherTextBoxFormat"), "%p", m_pOtherTextBoxFormats.get());
     }
 
     GetAttrSet().dumpAsXml(pWriter);
